# langchain-react-agent-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.zed/: settings.json
callbacks/: __init__.py  logging_callback.py
routers/: agents.py
schemas/: agent_schema.py
services/: agent_service.py  react_prompt.txt
services/tools/: __init__.py  calculator_tool.py  datetime_tool.py  search_tool.py
